crates/lang/macro/tests/ui/contract/fail/impl-block-for-non-storage-01.stderr
error: encountered ink! messages with overlapping selectors (= [2E, 78, 36, CC])
hint: use #[ink(selector = S:u32)] on the callable or #[ink(namespace = N:string)] on the implementation block to disambiguate overlapping selectors.
  --> $DIR/impl-block-for-non-storage-01.rs:27:9
   |
27 |         pub fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: first ink! message with overlapping selector here
  --> $DIR/impl-block-for-non-storage-01.rs:15:9
   |
15 |         pub fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
